# AppyHour

./: .gitignore  Blue Lemo_refund_log.txt  CLAUDE.md  Developer_Request_Unified_Fulfillment_Tool.docx  Elevate_Foods_Procurement_Guide.docx  MECHANIC-REFERENCE.md  _CLAUDE-original-2026-05-10.md  _gen_swap_csv.py  _list_drives.py  agent_sdk_example.py  build_ops_summary.py  check_swap_damage.py  cheesemonger_onboarding_doc.py  compare_matrix.py  conftest.py  conversational-layer-guide.md  developer_request_inventory_csv.md  developer_request_workflow_handoff.md  discovery_brief_3features.md  fix_ops_gaps.py  forge-state.md  matrix_commander.py  pyproject.toml  repair_alpha.py  test_food_safety_rows.json  test_food_safety_sync.py  tmp_cexec_combined.py  tmp_cexec_counts.py
.claude/: project.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.serena/: project.yml
AppyHourMCP/: CLAUDE.md  DISCOVERY_BRIEF.md  README.md  claude_desktop_config_snippet.json  install.bat  order_lookup.py  requirements.txt  run_shipping_report.py  run_swap.py  run_swap_brie_bras.py  run_swap_fowc.py  server.py  utils.py
AppyHourShippingMCP/: CLAUDE.md
InventoryReorder/: CLAUDE.md  CUT_ORDER_REDESIGN.md  DISCOVERY_BRIEF_CUT_ORDER.md  build_cut_order_xlsx.py  build_cut_order_xlsx_v2.py  build_exe.bat  build_fulfillment.bat  cut_order_generator.py  inventory_demand_report.py  inventory_reorder.py  ship_dates.py
ShippingReports/: CLAUDE.md  build_db.py  enrich_ups_delivery.py  ingest.py  melt_efficiency_calibrator.py  postmortem_runner.py  safety_factor_sweep.py  (+1 more)
(+304 files in other folders)
