[project]
name = "appyhour"
version = "1.0.0"
description = "Cold chain fulfillment analytics platform"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.5",
    "openpyxl>=3.1.5",
    "pyyaml>=6.0.3",
    "pydantic>=2.12.4",
]

[project.optional-dependencies]
fulfillment = [
    "flask>=3.1.2",
    "pywebview>=6.1",
    "fpdf2>=2.8.7",
]
shipping = [
    "aiohttp>=3.13.2",
]
mcp = [
    "mcp[cli]>=1.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9.0",
    "pyright>=1.1.390",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line length (handled by formatter)
    "S101",   # assert in tests is fine
    "S105",   # possible hardcoded password (too noisy for now)
    "S106",   # same
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = false
